[gd_scene load_steps=59 format=2]

[ext_resource path="res://Scripts/InventoryRadius.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Hero.gd" type="Script" id=2]
[ext_resource path="res://Scripts/camera_hero.gd" type="Script" id=3]
[ext_resource path="res://Scenes/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://SproutLands_texture_pack/Sprout Lands - Sprites - Basic pack/Characters/Basic Charakter Actions.png" type="Texture" id=5]
[ext_resource path="res://Resources/ChopDown.tres" type="Animation" id=6]

[sub_resource type="StreamTexture" id=58]
load_path = "res://.import/Basic Charakter Actions.png-da8e0e19d28617b76dcf43388d596346.stex"

[sub_resource type="Animation" id=28]
resource_name = "ChopLeft"
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "chop_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 58 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 12, 13 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HitBoxPivot/AttackHitBox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="StreamTexture" id=59]
load_path = "res://.import/Basic Charakter Actions.png-da8e0e19d28617b76dcf43388d596346.stex"

[sub_resource type="Animation" id=29]
resource_name = "ChopRight"
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "chop_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 59 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 14, 15 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HitBoxPivot/AttackHitBox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="StreamTexture" id=60]
load_path = "res://.import/Basic Charakter Actions.png-da8e0e19d28617b76dcf43388d596346.stex"

[sub_resource type="Animation" id=30]
resource_name = "ChopUp"
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "chop_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 60 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 10, 11 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HitBoxPivot/AttackHitBox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="StreamTexture" id=54]
load_path = "res://.import/Basic Charakter Spritesheet.png-254c120a9a8be9319e363800e9aa6627.stex"

[sub_resource type="Animation" id=3]
resource_name = "IdleDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 54 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="StreamTexture" id=55]
load_path = "res://.import/Basic Charakter Spritesheet.png-254c120a9a8be9319e363800e9aa6627.stex"

[sub_resource type="Animation" id=4]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 55 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="StreamTexture" id=56]
load_path = "res://.import/Basic Charakter Spritesheet.png-254c120a9a8be9319e363800e9aa6627.stex"

[sub_resource type="Animation" id=5]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 56 ) ]
}

[sub_resource type="StreamTexture" id=57]
load_path = "res://.import/Basic Charakter Spritesheet.png-254c120a9a8be9319e363800e9aa6627.stex"

[sub_resource type="Animation" id=6]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 57 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "PlowDown"
length = 0.2
loop = true

[sub_resource type="Animation" id=32]
resource_name = "PlowLeft"
length = 0.2
loop = true

[sub_resource type="Animation" id=33]
resource_name = "PlowRight"
length = 0.2

[sub_resource type="Animation" id=26]
resource_name = "PlowUp"
length = 0.2
loop = true

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitBoxPivot/AttackHitBox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="StreamTexture" id=49]
load_path = "res://.import/Basic Charakter Spritesheet.png-254c120a9a8be9319e363800e9aa6627.stex"

[sub_resource type="Animation" id=8]
resource_name = "RunDown"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 49 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="StreamTexture" id=53]
load_path = "res://.import/Basic Charakter Spritesheet.png-254c120a9a8be9319e363800e9aa6627.stex"

[sub_resource type="Animation" id=9]
resource_name = "RunLeft"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 53 ) ]
}

[sub_resource type="StreamTexture" id=51]
load_path = "res://.import/Basic Charakter Spritesheet.png-254c120a9a8be9319e363800e9aa6627.stex"

[sub_resource type="Animation" id=10]
resource_name = "RunRight"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 51 ) ]
}

[sub_resource type="StreamTexture" id=52]
load_path = "res://.import/Basic Charakter Spritesheet.png-254c120a9a8be9319e363800e9aa6627.stex"

[sub_resource type="Animation" id=11]
resource_name = "RunUp"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 52 ) ]
}

[sub_resource type="Animation" id=43]
resource_name = "TEST"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "ChopLeft"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "ChopUp"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "ChopRight"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "ChopDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=38]
blend_point_0/node = SubResource( 34 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 36 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 37 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 41 )
blend_point_3/pos = Vector2( 0, 1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 12 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 13 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 14 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 15 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "RunUp"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "RunRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 44 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 45 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 46 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 47 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachine" id=24]
states/Chop/node = SubResource( 38 )
states/Chop/position = Vector2( 611, 188 )
states/Idle/node = SubResource( 16 )
states/Idle/position = Vector2( 611, 100 )
states/Run/node = SubResource( 21 )
states/Run/position = Vector2( 793, 100 )
transitions = [ "Idle", "Run", SubResource( 22 ), "Run", "Idle", SubResource( 23 ), "Idle", "Chop", SubResource( 39 ), "Chop", "Idle", SubResource( 40 ) ]
start_node = "Idle"
graph_offset = Vector2( 213, 42 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=25]

[sub_resource type="CapsuleShape2D" id=42]
radius = 5.0
height = 4.0

[sub_resource type="CircleShape2D" id=61]
radius = 15.0

[sub_resource type="CircleShape2D" id=62]
radius = 2.23607

[node name="Hero" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 24, -4 )
texture = ExtResource( 5 )
offset = Vector2( -24, 0 )
hframes = 2
vframes = 12
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.54
anims/ChopDown = ExtResource( 6 )
anims/ChopLeft = SubResource( 28 )
anims/ChopRight = SubResource( 29 )
anims/ChopUp = SubResource( 30 )
anims/IdleDown = SubResource( 3 )
anims/IdleLeft = SubResource( 4 )
anims/IdleRight = SubResource( 5 )
anims/IdleUp = SubResource( 6 )
anims/PlowDown = SubResource( 31 )
anims/PlowLeft = SubResource( 32 )
anims/PlowRight = SubResource( 33 )
anims/PlowUp = SubResource( 26 )
anims/RESET = SubResource( 7 )
anims/RunDown = SubResource( 8 )
anims/RunLeft = SubResource( 9 )
anims/RunRight = SubResource( 10 )
anims/RunUp = SubResource( 11 )
anims/TEST = SubResource( 43 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 24 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 25 )
parameters/Chop/blend_position = Vector2( -0.579496, 0.72069 )
parameters/Idle/blend_position = Vector2( -0.179844, 0.0284483 )
parameters/Run/blend_position = Vector2( -0.00323623, -0.0189655 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
drag_margin_left = 0.5
drag_margin_top = 0.5
drag_margin_right = 0.5
drag_margin_bottom = 0.5
editor_draw_drag_margin = true
script = ExtResource( 3 )

[node name="HitBoxPivot" type="Position2D" parent="."]
position = Vector2( 0, -3 )
rotation = -1.5708

[node name="AttackHitBox" parent="HitBoxPivot" instance=ExtResource( 4 )]
position = Vector2( 10, 0 )
collision_mask = 4

[node name="CollisionShape2D" parent="HitBoxPivot/AttackHitBox" index="0"]
shape = SubResource( 42 )

[node name="InventoryRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InventoryRadius"]
shape = SubResource( 61 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 62 )

[connection signal="body_entered" from="InventoryRadius" to="InventoryRadius" method="_on_InventoryRadius_body_entered"]
[connection signal="body_exited" from="InventoryRadius" to="InventoryRadius" method="_on_InventoryRadius_body_exited"]

[editable path="HitBoxPivot/AttackHitBox"]
